--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,10 +1,10 @@
 <% unless @contents.nil? %>
-RESULTS GO HERE
+  <%= @contents %>
 <% end %>
 
 <%= form_with url: '/' do |form| %>
-  <%= form.label :documents %>
-  <%= form.file_field :documents, multiple: true %> <%# For multiple files %>
-
+  <%= form.label 'Upload Project File' %>
+  <%= form.file_field :files, multiple: true, include_hidden: false %> <%# For multiple files %>
+  <br />
   <%= form.submit %>
 <% end %>
